1.10/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
        - name: writer
          image: log-output:1.0
          command: ["node", "writer.js"]
          volumeMounts:
            - name: shared-data
              mountPath: /shared

        - name: reader
          image: log-output:1.0
          command: ["node", "reader.js"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-data
              mountPath: /shared
