1.10/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  selector:
    app: log-output
  ports:
    - port: 80
      targetPort: 3000
